# Harmony

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  cmake_install.cmake
Source/: ArgsParser.cpp  ArgsParser.h  Main  Main.cpp  SignalFormer.cpp  SignalFormer.h  SpectrAnalyzer.cpp  SpectrAnalyzer.h  WavFile.cpp  WavFile.h  app
Source/DataEncoder/: DataEncoder.cpp  DataEncoder.h  Main.cpp
Source/PythonDataDecoder/: DataEncoder.py  main.py  result.txt
Source/SystemHeaders/: SignalParams.h  SystemParams.h
Source/WavFile/: WavFile.cpp  WavFile.h
